--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,5 +98,7 @@ dependencies {
     implementation("androidx.room:room-ktx:2.3.0")
 
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
+
 
 }
