--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
+    implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
+
 }
