pawn functions finished

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,5 +106,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     implementation "pl.droidsonroids.gif:android-gif-drawable:1.2.22"
+    implementation 'id.zelory:compressor:3.0.1'
 
 }
