--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,15 @@
         <activity android:name=".qrscan.CaptureAct"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.shwemisale.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_path" />
+        </provider>
     </application>
 
 </manifest>
